src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_License_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child License Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_License_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_License_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Licensee_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Licensee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Profession__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Profession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <label>Alert Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <formula>IMAGE(
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;),
&quot;none&quot;)</formula>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Completed_Date2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Days_Till_Completed__c</fullName>
        <description>Number of days between the created datetime and the completed datetime</description>
        <formula>IF( ISNULL(MUSW__Completed_Date__c) , NULL,   (NOW() - CreatedDate) - (NOW() - MUSW__Completed_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Hr Days to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Days_till_Completed2__c</fullName>
        <formula>IF( ISNULL(MUSW__Completed_Date2__c) , NULL, (NOW() - CreatedDate) - (TODAY() - MUSW__Completed_Date2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>System Calculated when Task is not Closed</inlineHelpText>
        <label>Due Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__DurationInHours__c</fullName>
        <description>NO LONGER USED. Use Duration field instead.</description>
        <label>Duration (hours) DO NOT USE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Duration__c</fullName>
        <label>Duration</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Original_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Original_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Stayed</fullName>
                </value>
                <value>
                    <fullName>Tabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Predecessor_TaskId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Predecessor Task</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Shared_Link__c</fullName>
        <description>used for Alert Tasks on parents being shared to a Parcel</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parcel Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status_Icon__c</fullName>
        <formula>IMAGE( 
 IF(AND(ISNULL(MUSW__Completed_Date2__c), MUSW__Due_Date__c&lt; TODAY()), &quot;/img/entitlement/casemilestone_isviolated.png&quot;, 
  IF (MUSW__Completed_Date2__c &lt;= MUSW__Due_Date__c, &quot;/img/entitlement/casemilestone_iscompleted.gif&quot;, 
   IF (MUSW__Completed_Date2__c &gt; MUSW__Due_Date__c, &quot;/img/icon/warning16.png&quot;, 
   &quot;/s.gif&quot;
   )
  )
 ),
&quot;&quot;
)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_License_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Main License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles_Travelled__c</fullName>
        <label>Miles Travelled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_License_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_License_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Licensee_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Licensee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Profession__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Profession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_status__c</fullName>
        <label>Sub status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isDCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDCP</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>